syntax ="proto3";

package bookService;

option go_package = "pavel.book-service.v1;bookServicev1";
option csharp_namespace = "BookServiceCS";


service Book{
  rpc AddBook(AddBookRequest) returns (AddBookResponse);
  rpc GetBooks(GetBooksRequest) returns (GetBooksResponse);
  rpc GetBookById(GetBookByIdRequest) returns (GetBookByIdResponse);
}

message GetBookByIdRequest{
  int64 bookId = 1;
}
message GetBookByIdResponse {
  BookData book = 1;
}

message AddBookRequest {
  string author = 1;
  string name = 2;
}
message AddBookResponse {
  int64 id = 1;
}
message GetBooksRequest{}

message GetBooksResponse{
  repeated BookData books = 1;
}

message BookData{
  string author = 1;
  string name = 2;
}




