syntax="proto3";

package orderService;

option go_package = "pavel.order-service.v1;orderServicev1";

service Order {
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
  rpc AddOrder(AddOrderRequest) returns (AddOrderResponse);
}
message GetOrdersRequest{}

message GetOrdersResponse{
  repeated OrderData orderData = 1;
}

enum OrderStatus{
  UNKNOWN = 0;
  PENDING = 1;
  COMPLETED = 2;
  CANCELLED = 3;
}

message OrderData{
  string order_id = 1;
  int64 book_id = 2;
  OrderStatus status = 3;
  double price = 4;
  string place = 5;
}

message AddOrderRequest{
  int64 book_id = 1;
  OrderStatus status = 2;
  double price = 3;
  string place = 4;
}

message AddOrderResponse{
  string order_id = 1;
}